tried w bad makefiles

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Connor Hanson: cbhanson2@wisc.edu - chanson
 Tiger Ji: tfji@wisc.edu - tfji
 
 Contributions:
-  Connor - makefile finding and parsing
+  Connor - makefile finding and parsing, testing, graph traversals
   Tiger - node implementation and traversal
 
 Notes:
